- Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.
- !roll should work properly now.
- Improved !raffle logic slightly. Will now determine the number of times to do a roll depending on the number of people in the raffle.
- Added setting Members->QuietUpdate to let the bot do roster updates quietly (default off).


-------------
Version 0.6.3
-------------
- Fixed stripping of control characters on text from IRC (logon/logoff)
- Fixed a bug where the quotes module would crash if there where no quotes in the database
- Added option to relay to suffix relayed text with a characters main. Controlled using !set relay showmain on/off
- Added option to truncate the name of the main character for relayed text.
- No Longer invites because of a bot restart if autoinvite is on, they will get invited if they were in PG before restart anyway
- Added Option to have News Spammed at PGjoin.
- Added improved handling of rerolled characters.
- Whois table is no longer wiped for AoC bots upon startup.
- Updated AO server information due to changed ports.
- Fixed bug #380461 causing the AOC Autouseradd module to never add silently.


-------------
Version 0.6.2
-------------
- Fixed double removal on !is calls for people not on the notify list
- Fixed Tyranny Port
- Fixed Update to whois table
- Fixed Check for in PG for mass invite
- Fixed Links in Main blob for maintenance
- Added Optional Timer to Raffle as well as support for Item output useing &item& lowid highid ql name
- Fixed pgleave in Raid
- Added a Fix for blobs that are too large for preg_match
- Added Relaying of Buddy Actions to Allow !online to include other org (when dif host)
- Improved Relay Bot responsed on getting bot into the pg
- Added Encription of Chat option to relay (req mhash & mcrypt)
- Added ignore setting for those users who maybe not want in your gc but want to still have relay with other org
- Added option of not having other org prefix shown